Added scim compliance tests